newmysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name-mysql
  labels:
    app: name-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: name-mysql
  template:
    metadata:
      labels:
        app: name-mysql
    spec:
      containers:
        - image: mysql:8
          name: name-mysql
          args:
            - "--default-authentication-plugin=mysql_native_password"
          ports:
            - containerPort: 3306
              name: name-mysql
          volumeMounts:
            - name: name-mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: name-mysql-persistent-storage
          persistentVolumeClaim:
            claimName: name-mysql-volumeclaim
