newmysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: name-mysql
  labels:
    app: name-mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: name-mysql
