newwordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $(NEWNAME)
  labels:
    app: $(NEWNAME)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $(NEWNAME)
  template:
    metadata:
      labels:
        app: $(NEWNAME)
    spec:
      containers:
        - image: wordpress
          name: $(NEWNAME)
          ports:
            - containerPort: 80
              name: $(NEWNAME)
          volumeMounts:
            - name: $(NAMEPERSISTENT)
              mountPath: /var/www/html
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: $(NAMEPERSISTENT)
          persistentVolumeClaim:
            claimName: $(NAMECLAIM)
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: $(NEWNAME)
  name: $(NEWNAME)
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: $(NEWNAME)
