newwordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: name
  name: name
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: name
